--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>vue-webapp-music</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
     <!-- built files will be auto injected -->
+    </div>
   </body>
 </html>
